# sepp-py

./: .gitignore  LICENSE  README.md  buf.gen.yaml  buf.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: main.py  traced.py
proto/: queue.proto
proto/sepp/v1/: queue.proto
scripts/: gen_proto.sh
src/sepp/: __init__.py  _convert.py  _otel.py  _pb.py  client.py  errors.py  types.py  worker.py
src/sepp/_pb/: __init__.py  queue_pb2.py  queue_pb2.pyi  queue_pb2_grpc.py
src/sepp/v1/: __init__.py  queue_pb2.py  queue_pb2_grpc.py
tests/: conftest.py  test_client.py  test_conversions.py  test_errors.py  test_otel.py  test_types.py  test_worker.py
tests/integration/: conftest.py  test_integration.py
