[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sepp"
version = "0.1.0"
description = "An async Python client for the sepp durable job queue."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "sepp-org" }]
keywords = ["sepp", "job-queue", "grpc", "asyncio", "worker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "grpcio>=1.81.1",
    "protobuf>=7.35.1",
]

[project.optional-dependencies]
# Mirrors the Rust client's default-on `opentelemetry` feature: spans, metrics,
# and W3C trace-context propagation from producer to worker.
otel = [
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
]

[project.urls]
Homepage = "https://github.com/sepp-org/sepp"
Repository = "https://github.com/sepp-org/sepp-py"
Issues = "https://github.com/sepp-org/sepp-py/issues"
Protocol = "https://github.com/sepp-org/proto"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
    "testcontainers>=4.14.2",
    "types-protobuf>=7.34.1.20260518",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sepp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests", "examples"]
line-length = 100
extend-exclude = ["src/sepp/v1"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
# Tests use deliberately loose fakes (object stand-ins, type: ignore); they are
# validated by running them, not by mypy.
files = ["src/sepp", "examples"]
# Generated protobuf stubs are excluded from strict checking.
exclude = ["src/sepp/v1/"]

[[tool.mypy.overrides]]
module = "sepp.v1.*"
ignore_errors = true
follow_imports = "skip"

# grpc and opentelemetry do not ship complete type information.
[[tool.mypy.overrides]]
module = ["grpc", "grpc.*", "opentelemetry", "opentelemetry.*"]
ignore_missing_imports = true
